--- a/index.html
+++ b/index.html
@@ -5,36 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- ini adalah bagian header -->
     <header>
-
+        <h1>Belajar membuat layout dengan HTML dan CSS</h1>
     </header>
-    <section>
-        <h1>Hellowww world </h1>
-        <img src="images/berry.jpg" alt=""style="width: 20%; margin: 20px auto: display: block;">
-        <table>
-            <tr>
-                <td>Nama</td>
-                <td>:</td>
-                <td>Jaemin</td>
-            </tr>
-            <tr>
-                <td>NIM</td>
-                <td>:</td>
-                <td>210222</td>
-            </tr>
-            <tr>
-                <td>Alamat</td>
-                <td>:</td>
-                <td>Seoul, Korea Selatan</td>
-            </tr>
-            <tr>
-                <td>Detail Profile</td>
-                <td>:</td>
-                <td><a href="https://id.wikipedia.org/wiki/Na_Jae-min" target="_blank">Click Here!</a></td>
-            </tr>
-        </table>
-    </section>
+
+    <!--ini adalah bagian nav menu -->
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!--ini adalah container untuk body content -->
+    <div id="container">
+        <!--ini adalah section content Kiri -->
+        <section class="kiri">
+            <div class="content">
+                <h2>Judul Berita</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus velit, minima adipisci voluptatum omnis ut eaque veritatis atque dolor ex iste blanditiis unde, modi nam, perspiciatis illo ea repudiandae hic.</p>
+                <button>Read More...</button>
+            </div>
+            <div class="content">
+                <h2>Judul Berita</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus velit, minima adipisci voluptatum omnis ut eaque veritatis atque dolor ex iste blanditiis unde, modi nam, perspiciatis illo ea repudiandae hic.</p>
+                <button>Read More...</button>
+            </div>
+        </section>
+
+        <!--ini adalah section content Kanan -->
+        <section class="kanan">
+            <div class="content1">
+                <h2>CATEGORY</h2>
+                <hr>
+                <ul>
+                    <li><a href="#">HTML</a></li>
+                    <li><a href="#">CSS</a></li>
+                    <li><a href="#">Javascript</a></li>
+                    <li><a href="#">Bootstrap</a></li>
+                    <li><a href="#">PHP</a></li>
+                    <li><a href="#">MYSQL</a></li>
+                    <li><a href="#">Laravel</a></li>
+                </ul>
+            </div>
+        </section>
+    </div>
+
+    <!-- Ini adalah bagian footer-->
+    <footer>
+        <p>Copyright PSTI 2022</p>
+    </footer>   
 </body>
 </html>
